# BOR

./: Cargo.toml  README.md  rustfmt.toml
installation/: PKGBUILD  bor.service  install_service.sh  leb.service
src/: commands.rs  config.rs  data.rs  error.rs  filtering.rs  logging.rs  main.rs
src/builtins/: meta.rs  mod.rs  random.rs  settings.rs  users.rs
src/builtins/moderation/: ban.rs  kick.rs  mod.rs  timeout.rs  warn.rs
src/builtins/users/: ban.rs  mod.rs  timeout.rs  warn.rs
