[package]
name = "bot_of_retribution"
version = "0.1.0"
edition = "2021"
authors = ["Decator <decator.c@proton.me>"]

[[bin]]
name = "bor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.11"}
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.7"
structstruck = "0.3.0"
lazy_static = "1.4"
log = "0.4.6"
env_logger = "0.10.0"
rand = "0.8.5"

# Warning system
bor_warn = { git = "https://github.com/Sir-Bobert-II/BOR-Warn.git" }

# Conversions
bor_conversions = { git = "https://github.com/Sir-Bobert-II/BOR-conversions" }

# Wikipedia
bor_wiki = {git = "https://github.com/Sir-Bobert-II/BOR-wiki"}

# Define words
bor_define = {git = "https://github.com/Sir-Bobert-II/BOR-define.git"}
