[package]
name = "bot_of_retribution"
version = "0.1.0"
edition = "2021"
authors = ["Decator <decator.c@proton.me>"]

[[bin]]
name = "bor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.11"}
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.7"
structstruck = "0.3.0"
lazy_static = "1.4"
log = "0.4.6"
env_logger = "0.10.0"
rand = "0.8.5"

# Warning system
bor_warn = { git = "https://github.com/Sir-Bobert-II/BOR-Warn.git", rev = "ca41250e935ac478cb8021589ba0bc46f18fd031" }

# Conversions
bor_conversions = { git = "https://github.com/Sir-Bobert-II/BOR-conversions", rev = "0a8b98b66518bb1db5a592dfa917af5e8a29a0b4" }

# Wikipedia
bor_wiki = {git = "https://github.com/Sir-Bobert-II/BOR-wiki", rev = "57d34efc3be4dedcfe7a65bfcb07dfdda4fb8115" }

# Define words
bor_define = {git = "https://github.com/Sir-Bobert-II/BOR-define.git", rev = "ac250c6ebef871b1bb49e548f02cc3d20317b5b7"}

# Quotes
quote = { git="https://github.com/Sir-Bobert-II/BOR-extra", rev ="f31f85bc48c6b90a5f19facfcf7ea561a959374a" }