[package]
name = "bot_of_retribution"
version = "0.1.0"
edition = "2021"
authors = ["Decator <decator.c@proton.me>"]

[[bin]]
name = "bor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.11"}
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.7"
structstruck = "0.3.0"
lazy_static = "1.4"
log = "0.4.6"
env_logger = "0.10.0"
rand = "0.8.5"

# Warning system
bor_warn = { git = "https://github.com/Sir-Bobert-II/BOR-Warn.git", rev = "ca41250e935ac478cb8021589ba0bc46f18fd031" }

# Conversions
bor_conversions = { git = "https://github.com/Sir-Bobert-II/BOR-conversions", rev = "19e6db17b507f9f6be4f9f5b01006f3a01ba6888" }

# Wikipedia
bor_wiki = {git = "https://github.com/Sir-Bobert-II/BOR-wiki", rev = "57d34efc3be4dedcfe7a65bfcb07dfdda4fb8115" }

# Define words
bor_define = {git = "https://github.com/Sir-Bobert-II/BOR-define.git", rev = "b3332eec2d2bdb33174c57140b815cd6d982619f"}

# Quotes
quote = { git="https://github.com/Sir-Bobert-II/BOR-extra", rev ="35eaf038fe24026ec695a208d62fa86179878e31" }

# Image
image = { git="https://github.com/Sir-Bobert-II/BOR-extra", rev = "35eaf038fe24026ec695a208d62fa86179878e31"}